Make header relative for now due to unsupported background-attachment: fixed; on iOS

--- a/index.css
+++ b/index.css
@@ -419,15 +419,12 @@ body:not(.user-is-tabbing) a:focus {
 
 
 .header__background {
-    position: absolute;
-    top: 0;
+    position: relative;
     width: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .7)), url('./images/header.jpg');
     height: 100vh;
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .7)), url('./images/header.jpg');
     background-size: cover;
     background-position: right 20%;
-    background-attachment: fixed;
-    font-size: var(--font-size-normal);
     z-index: -3;
 }
 
